<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2023 Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_add_camera"
        android:icon="@drawable/ic_camera"
        android:title="@string/camera" />

    <item
        android:id="@+id/nav_add_photos"
        android:icon="@drawable/ic_image"
        android:title="@string/photos" />

    <item
        android:id="@+id/nav_add_location"
        android:icon="@drawable/ic_my_location_"
        android:title="@string/location" />

    <item
        android:id="@+id/nav_add_gif"
        android:icon="@drawable/ic_gif"
        android:title="@string/gif" />

    <item
        android:id="@+id/nav_add_document"
        android:icon="@drawable/ic_file"
        android:title="@string/document" />

    <item
        android:id="@+id/nav_add_contact"
        android:icon="@drawable/ic_contact"
        android:title="@string/contact" />

</menu>