<?xml version="1.0" encoding="utf-8"?><!--
  ~
  ~    Copyright 2022 Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_conversation_list"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/conversations_icon_selector"
        android:title="@string/title_conversations" />

    <item
        android:id="@+id/navigation_status"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/stories_icon_selector"
        android:title="@string/title_statuses" />

    <item
        android:id="@+id/navigation_notifications"
        android:checkable="true"
        android:checked="false"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications"
        android:visible="false" />

</menu>