<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2023 Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true">

    <LinearLayout
        android:id="@+id/root_enter_phone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:id="@+id/scroll_view_enter_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/dimen_4">

                <TextView
                    android:id="@+id/sign_up_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:gravity="center"
                    android:text="@string/enter_your_phone_number"
                    android:textAppearance="@style/TextAppearance.Messenger.LabelExtraLarge" />

                <TextView
                    android:id="@+id/countryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:layout_marginVertical="24dp"
                    android:background="@drawable/edit_text_background"
                    android:drawableEnd="@drawable/ic_arrow_drop_down"
                    android:foreground="?selectableItemBackground"
                    android:gravity="center"
                    android:padding="@dimen/dimen_12"
                    android:text="@string/select_a_country"
                    android:textAppearance="@style/TextAppearance.Messenger.LabelRegistrationEditText"
                    tools:targetApi="m" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:layout_marginBottom="24dp"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/countryCodeHolder"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:hint="@string/code"
                        android:minEms="5"
                        app:helperTextEnabled="false"
                        app:prefixText="+">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/countryCode"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:autofillHints="phone"
                            android:inputType="number"
                            android:maxLength="4"
                            android:textAppearance="@style/TextAppearance.Messenger.LabelRegistrationEditText"
                            tools:background="@android:color/transparent"
                            tools:text="91">

                            <requestFocus />
                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/phoneHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/dimen_8"
                        android:gravity="center"
                        android:hint="@string/phone_number"
                        android:orientation="vertical"
                        app:suffixTextColor="?android:textColorPrimary">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:autofillHints="phone"
                            android:inputType="phone"
                            android:textAppearance="@style/TextAppearance.Messenger.LabelRegistrationEditText"
                            tools:background="@android:color/transparent"
                            tools:text="123456789">

                        </com.google.android.material.textfield.TextInputEditText>

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingHorizontal="48dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:text="@string/sms_disclaimer_phone_auth"
                        android:textAppearance="@style/TextAppearance.Messenger.LabelExtraSmall" />

                    <TextView
                        android:id="@+id/disclaimer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="24dp"
                        android:alpha="0.8"
                        android:gravity="center"
                        android:text="@string/you_agree_disclaimer_phone_auth"
                        android:textAppearance="@style/TextAppearance.Messenger.LabelExtraSmall" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            style="@style/Messenger.Widget.MaterialButton"
            android:enabled="false"
            android:text="@string/send_sms"
            app:elevation="0dp" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/root_enter_sms_code"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone">

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="@dimen/dimen_8">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_8">

                <TextView
                    android:id="@+id/header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:gravity="center"
                    android:paddingVertical="@dimen/dimen_16"
                    android:textAppearance="@style/TextAppearance.Messenger.LabelExtraLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/enter_sms_code_we_sent_to" />

                <EditText
                    android:id="@+id/codeView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_16"
                    android:layout_marginVertical="@dimen/dimen_32"
                    android:background="@drawable/edittext_background_focused"
                    android:gravity="center"
                    android:hint="@string/enter_otp_hint"
                    android:inputType="number"
                    android:maxLength="6"
                    android:padding="@dimen/dimen_8"
                    android:textAppearance="@style/TextAppearance.Messenger.OtpVerificationView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/header"
                    tools:text="@tools:sample/us_phones" />

                <TextView
                    android:id="@+id/editNumberButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/text_default_padding"
                    android:background="?selectableItemBackground"
                    android:padding="@dimen/dimen_4"
                    android:text="@string/edit_number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/codeView"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/error"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_12"
                    android:gravity="center"
                    android:maxLines="4"
                    android:padding="@dimen/dimen_8"
                    android:textAppearance="@style/TextAppearance.Messenger.LabelSmall"
                    android:textColor="?colorError"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/editNumberButton"
                    tools:text="@tools:sample/lorem/random"
                    tools:visibility="visible" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>

</LinearLayout>
