<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2023 Aditya Bavadekar
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/messenger_light_color_primary_container"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dimen_16">

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.Messenger.LabelExtraLarge"
        android:textColor="@color/messenger_black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="0.7"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_8"
        android:text="@string/copyright_message"
        android:textColor="@color/messenger_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_16"
        android:alpha="0.7"
        android:clickable="false"
        android:focusable="false"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_8"
        tools:text="@string/app_version_formatted"
        android:textColor="@color/messenger_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/imageHolder"
        android:layout_width="94dp"
        android:layout_height="94dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/messenger_white"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="@dimen/dimen_8"
            android:src="@drawable/messenger_logo_drawable" />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/licenses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_16"
        android:alpha="0.7"
        android:background="?selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/dimen_8"
        android:text="@string/open_source_licenses"
        android:textAppearance="@style/TextAppearance.Messenger.LabelSmall"
        android:textColor="@color/messenger_blue900" />


</LinearLayout>